# fraud-disputes-resolution

./: .env.example  .gitignore  FRAUD_DISPUTE_REQUIREMENTS.md  README.md  TECH_PLAN.md  langgraph.json  pyproject.toml
phase1_1_single_agent/: FINDINGS.md  agent.py
phase1_2_state_machine/: graph.py
phase2_1_supervisor/: graph.py
phase2_2_parallel/: graph.py
phase3_1_persistence/: graph.py
phase3_2_human_in_loop/: graph.py
shared/: mock_data.py  model_factory.py  models.py  tools.py
